# argentina-economic-sectors

./: .gitignore  README.md
economic-sectors/: .env_example  Dockerfile  README.md  cleaning.ipynb  docker-compose.yml  ingestion.py  pyproject.toml  translate_dicts.py
economic-sectors/flows/: economic-sectors.gcp_kv.yaml  economic-sectors.ingestion.yaml  economic-sectors.load_economic_sectors.yaml
economic-sectors/queries/: data-studio-query.sql
