[project]
name = "economic-sectors"
version = "0.1.0"
description = "Environment for economic-sectors repository"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[parquet,postgres]>=1.24.0",
    "pandas>=3.0.1",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
]
